--- a/qrvey/src/app/home/home.component.scss
+++ b/qrvey/src/app/home/home.component.scss
@@ -1,10 +1,118 @@
 $yellow: #F2C94C;
+$gray: #cecece;
+$blueStrong: #09295E;
+$blueLigth: #21ADCF;
+$blueHover: #E4F2F7;
 
 .star{
     vertical-align: text-bottom;
     cursor: pointer;
+    font-size: 12px;
+}
+
+.star2{
+    vertical-align: text-top;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 .yellow{
     color: $yellow;
+}
+
+.flag{
+    border: 1px solid $gray;
+}
+
+ul{
+    padding-left: 0;
+}
+
+li{
+    list-style:none;
+    cursor: pointer;
+}
+
+li:hover{
+    background-color: $blueHover;
+}
+
+.planet{
+    max-height: 300px;
+    width: 100%;
+    border-radius: 0 0 0 150px;
+}
+
+header{
+    max-width: 100% !important;
+    margin: 0;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+h1{
+    margin-top: 70px;
+    font-size: 40px;
+    color: $blueStrong;
+    font-weight: 600;
+    text-align: center;
+}
+
+h1 span{
+    color: $blueLigth;
+}
+
+h2{
+    font-size: 28px;
+    color: $blueStrong;
+}
+
+h3{
+    color: $blueStrong;
+    font-weight: 600;
+}
+
+.modal-header{
+    border: none;
+}
+
+.modal-body{
+    padding-top: 0;
+}
+
+input{
+    width: 65%;
+    display: inline-block;
+    margin-left: 50px;
+}
+
+select{
+    display: inline-block;
+    width: 20%;
+}
+
+.search{
+    width: 37px;
+    height: 37px;
+    display: inline-block;
+    background-color: $blueLigth;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 0 10px 10px 0;
+    vertical-align: bottom;
+}
+
+p{
+    text-align: center;
+    width: 100%;
+    font-size: 24px;
+    color: #CECECE;
+    margin-top: 50px;
+}
+
+@media (min-width: 1200px){
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width: 95%;
+    }
 }
